add self hosted fonts

--- a/packages/ui/styles/constants/_typography.scss
+++ b/packages/ui/styles/constants/_typography.scss
@@ -1,4 +1,4 @@
-$fontFamilyHeading: 'Roboto', 'Helvetica', 'Arial', sans-serif !default;
+$fontFamilyHeading: 'PP Telegraf', 'Helvetica', 'Arial', sans-serif !default;
 $fontWeightHeadingRegular: 400 !default;
 $fontWeightHeadingBold: 500 !default;
 $fontFamilyText: 'Open Sans', 'Helvetica', 'Arial', sans-serif !default;
