--- a/packages/ui/styles/constants/_typography.scss
+++ b/packages/ui/styles/constants/_typography.scss
@@ -1,4 +1,5 @@
-$fontFamilyHeading: 'PP Telegraf', 'Helvetica', 'Arial', sans-serif !default;
+// @todo: remove 'Roboto' after we release New Brand. It's only for backward compatibility here
+$fontFamilyHeading: 'Roboto', 'PP Telegraf', 'Helvetica', 'Arial', sans-serif !default;
 $fontWeightHeadingRegular: 400 !default;
 $fontWeightHeadingBold: 500 !default;
 $fontFamilyText: 'Open Sans', 'Helvetica', 'Arial', sans-serif !default;
