--- a/packages/ui/src/InteractiveList.module.scss
+++ b/packages/ui/src/InteractiveList.module.scss
@@ -26,7 +26,7 @@ ul.list {
   margin: 0;
 
   .content {
-    background: c.$colorCustom6;
+    background: c.$colorOverlayBackground;
     padding: c.$grid c.$grid * 3;
     margin-top: c.$grid * 3;
     border: c.$borderWidth solid c.$colorNeutralLight;
