--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -23,7 +23,7 @@ $marginLeftWithIcon: c.$grid * 5;
     flex-direction: row;
     box-sizing: border-box;
     height: c.$inputHeight;
-    background-color: c.$colorCustom6;
+    background-color: c.$colorOverlayBackground;
     border-radius: c.$borderRadius;
   }
 
