*feat TextField and PasswordField "secondary" variant and "large" size *feat Label variant property *feat Button new color and size *feat gradients

--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -18,7 +18,7 @@ $colorWarningDark: #ad6200 !default;
 $colorErrorLight: #e75851 !default;
 $colorError: #b00020 !default;
 $colorErrorDark: #891b15 !default;
-$colorText: #041a3b !default;
+$colorText: #061827 !default;
 $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
 $colorOverlayBackground: #f0f6ff !default;
@@ -27,4 +27,3 @@ $colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
 $colorMenuDark: #333 !default;
 $colorCustom4: #c6ff3a !default;
-$colorCustom7: #061827 !default;
