--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -26,4 +26,4 @@ $colorAccessibilityOutline: #9648bd !default;
 $colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
 $colorMenuDark: #333 !default;
-$colorCustom4: #c6ff3a !default;
+$authPrimary: #c6ff3a !default;
