*feat TextField and PasswordField "secondary" variant and "large" size *feat Label variant property *feat Button new color and size *feat gradients

--- a/packages/ui/styles/helpers/_gradients.scss
+++ b/packages/ui/styles/helpers/_gradients.scss
@@ -7,5 +7,5 @@
 
 @mixin gradientOcean {
   background: c.$colorText;
-  background: linear-gradient(270deg, c.$colorText 0%, #1b2939 100%);
+  background: linear-gradient(270deg, #0c6f8e 0%, #1b2939 100%);
 }
