*feat PasswordField hideToggle property

--- a/packages/ui/src/PasswordField.module.scss
+++ b/packages/ui/src/PasswordField.module.scss
@@ -17,4 +17,10 @@ $inputMargin: c.$iconSizeSmall + $buttonMargin * 2;
     top: 50%;
     transform: translateY(-50%);
   }
+
+  &.withoutToggle {
+    > input {
+      margin-right: 0;
+    }
+  }
 }
