--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -7,16 +7,16 @@ $colorNeutralLighter: #fafafa !default;
 $colorNeutralLight: #b7c1cb !default;
 $colorNeutral: #dbdbdb !default;
 $colorSuccess: #85da66 !default;
-$colorSuccessLight: rgba($colorSuccess, 30%) !default;
+$colorSuccessLight: #d5f0d1 !default;
 $colorSuccessDark: darken($colorSuccess, 10%) !default;
 $colorInfo: #76e7e7 !default;
-$colorInfoLight: rgba($colorInfo, 30%) !default;
+$colorInfoLight: #d0f4f8 !default;
 $colorInfoDark: darken($colorInfo, 10%) !default;
 $colorWarning: #ffec44 !default;
-$colorWarningLight: rgba($colorWarning, 30%) !default;
+$colorWarningLight: #f9f6c7 !default;
 $colorWarningDark: darken($colorWarning, 15%) !default;
 $colorError: #dc084b !default;
-$colorErrorLight: rgba($colorError, 30%) !default;
+$colorErrorLight: #efb1c9 !default;
 $colorErrorDark: darken($colorError, 10%) !default;
 $colorText: #061827 !default;
 $colorTextSecondary: #707482 !default;
