*fix success instead of successLight color for all components except Notification, Alert and Toast

--- a/packages/ui/src/Checkbox.module.scss
+++ b/packages/ui/src/Checkbox.module.scss
@@ -44,8 +44,8 @@
   }
 
   & > input:checked ~ .checkmark {
-    background-color: c.$colorSuccessLight;
-    border-color: c.$colorSuccessLight;
+    background-color: c.$colorSuccess;
+    border-color: c.$colorSuccess;
   }
 
   /**
