--- a/packages/ui/src/CircularProgressBar.module.scss
+++ b/packages/ui/src/CircularProgressBar.module.scss
@@ -17,7 +17,7 @@
 
   .progressCircle {
     fill: none;
-    stroke: c.$colorSuccessLight;
+    stroke: c.$colorSuccess;
     stroke-linecap: round;
     transition: stroke-dashoffset 750ms ease-in-out;
   }
