--- a/packages/ui/src/SegmentedControl.module.scss
+++ b/packages/ui/src/SegmentedControl.module.scss
@@ -33,7 +33,7 @@
 
     &.checked {
       color: c.$colorText;
-      border-bottom-color: c.$colorSuccessLight;
+      border-bottom-color: c.$colorSuccess;
     }
 
     &:first-of-type {
