--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -74,8 +74,8 @@
 
   &.checked {
     color: c.$colorNeutralWhite;
-    background-color: c.$colorSuccessLight;
-    border-color: c.$colorSuccessLight;
+    background-color: c.$colorSuccess;
+    border-color: c.$colorSuccess;
   }
 }
 
