--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -23,7 +23,7 @@ $currentValueIndicatorHeight: c.$grid * 6;
 
 @mixin thumb() {
   box-shadow: 0 c.$sliderThumbShadowSize c.$sliderThumbShadowBlur c.$colorShadow;
-  background: c.$colorSuccessLight; // background will represent the dot inside
+  background: c.$colorSuccess; // background will represent the dot inside
   border: c.$sliderThumbBorderSize solid c.$colorNeutralWhite; // the white part will be done by the border
   box-sizing: content-box; /* and because of all of this, we need content-box */
   border-radius: 50%;
