change accessibility-outline colour

--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -22,7 +22,7 @@ $colorText: #061827 !default;
 $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
 $colorOverlayBackground: #f0f6ff !default;
-$colorAccessibilityOutline: #9648bd !default;
+$colorAccessibilityOutline: #7744ff !default;
 $colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
 $colorMenuDark: #333 !default;
