--- a/packages/ui/src/Carousel.module.scss
+++ b/packages/ui/src/Carousel.module.scss
@@ -8,13 +8,21 @@
   margin-bottom: c.$grid * 2;
 }
 
-.nextButtonClassName {
+.nextButtonClassName,
+.prevButtonClassName {
+  padding: 0 !important;
   position: relative;
+  height: 40px;
+  &:focus {
+    @include h.outlineAround;
+  }
+}
+
+.nextButtonClassName {
   left: c.$grid * 12;
 }
 
 .prevButtonClassName {
-  position: relative;
   right: c.$grid * 12;
 }
 
@@ -23,4 +31,11 @@
   top: c.$grid * 7;
   margin-left: c.$grid * 0.5;
   margin-right: c.$grid * 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: c.$grid * 1.5;
+  &:focus {
+    @include h.outlineAround;
+  }
 }
