add permanent placeholder for checkable select field

--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -8,6 +8,10 @@
 .opener {
   input {
     cursor: pointer;
+
+    &.withPermanentPlaceholder {
+      color: c.$colorTextSecondary;
+    }
   }
 }
 
