fix(ui): add permanent placeholder story and fix styling issue

--- a/packages/ui/src/Select/CheckableSelectField.module.scss
+++ b/packages/ui/src/Select/CheckableSelectField.module.scss
@@ -8,8 +8,10 @@
 .opener {
   input {
     cursor: pointer;
+  }
 
-    &.withPermanentPlaceholder {
+  &.withPermanentPlaceholder {
+    input {
       color: c.$colorTextSecondary;
     }
   }
