--- a/packages/ui/src/Tabs/Tab.module.scss
+++ b/packages/ui/src/Tabs/Tab.module.scss
@@ -30,7 +30,7 @@
 
   &.selected {
     color: c.$colorPrimary;
-    border-radius: none;
+    border-radius: 0;
     border-color: c.$colorPrimary;
     box-shadow: inset 0 -4px 0 0 c.$colorPrimary;
   }
@@ -41,16 +41,5 @@
 
   &:hover {
     color: c.$colorPrimary;
-  }
-
-  &:focus {
-    // Do not remove outline for high-contrast modes
-    // https://stackoverflow.com/a/52616313
-    outline: c.$outlineWidth solid transparent;
-    color: c.$colorPrimary;
-    border-radius: c.$borderRadius;
-    border-color: transparent;
-
-    @include h.outlineSimple;
   }
 }
