--- a/packages/ui/src/Tabs/Tab.module.scss
+++ b/packages/ui/src/Tabs/Tab.module.scss
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   height: c.$grid * 10;
   min-width: c.$grid * 40;
-  padding: 0 c.$grid * 5;
+  padding: 0 c.$grid * 5 c.$grid c.$grid * 5;
   border: none;
   border-bottom: 1px solid;
   border-color: c.$colorNeutralLight;
@@ -35,11 +35,28 @@
     box-shadow: inset 0 -4px 0 0 c.$colorPrimary;
   }
 
+  &.selected:focus-visible {
+    border-color: c.$colorPrimary;
+    border-bottom-width: c.$grid;
+    padding-bottom: 0;
+  }
+
   &.fullWidth {
     flex: 1 1 auto;
   }
 
   &:hover {
     color: c.$colorPrimary;
+  }
+
+  &:focus-visible {
+    // Do not remove outline for high-contrast modes
+    // https://stackoverflow.com/a/52616313
+    outline: c.$outlineWidth solid transparent;
+    color: c.$colorPrimary;
+    border-radius: c.$borderRadius;
+    border-color: transparent;
+
+    @include h.outlineSimple;
   }
 }
