--- a/packages/ui/src/Slider.module.scss
+++ b/packages/ui/src/Slider.module.scss
@@ -162,7 +162,7 @@ ul.markDescriptions {
       }
 
       &.focus,
-      &:focus {
+      &:focus-visible {
         @include styleThumb {
           box-shadow: 0 0 0 c.$outlineWidth c.$colorAccessibilityOutline;
         }
