--- a/packages/ui/src/Table/Header.module.scss
+++ b/packages/ui/src/Table/Header.module.scss
@@ -61,7 +61,7 @@
     &.sortable {
       cursor: pointer;
 
-      &:focus {
+      &:focus-visible {
         // Do not remove outline for high-contrast modes
         // https://stackoverflow.com/a/52616313
         outline: c.$outlineWidth solid transparent;
