--- a/packages/ui/src/Table/Row.module.scss
+++ b/packages/ui/src/Table/Row.module.scss
@@ -12,7 +12,7 @@
   &.clickable {
     cursor: pointer;
 
-    &:focus {
+    &:focus-visible {
       @include h.outlineSimple;
 
       // Do not remove outline for high-contrast modes
@@ -36,7 +36,7 @@
     text-decoration: none;
     background-color: inherit;
 
-    &:focus {
+    &:focus-visible {
       @include h.outlineSimple;
 
       // Do not remove outline for high-contrast modes
