--- a/packages/ui/src/InteractiveList.module.scss
+++ b/packages/ui/src/InteractiveList.module.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @use '../styles/constants' as c;
 
 $addIconSpacing: c.$grid;
@@ -60,7 +61,7 @@ ul.list {
 
   .content {
     background: c.$colorOverlayBackground;
-    padding: c.$grid / 3 c.$grid c.$grid / 3 c.$grid * 2;
+    padding: math.div(c.$grid, 3) c.$grid math.div(c.$grid, 3) c.$grid * 2;
     margin-top: c.$grid * 3;
     border: c.$borderWidth solid c.$colorNeutralLight;
     border-radius: c.$borderRadius;
