feat(ui): add close button to Notification

--- a/packages/ui/src/Notification.module.scss
+++ b/packages/ui/src/Notification.module.scss
@@ -35,6 +35,10 @@
     @include c.typographyBodyWeight('bold');
   }
 
+  .closeButton {
+    margin-left: c.$grid * 3;
+  }
+
   /* Theme - success */
   &.success {
     color: c.$colorText;
