feat(ui): Apply neutral color to sort icon if disabled

--- a/packages/ui/src/Table/Header.module.scss
+++ b/packages/ui/src/Table/Header.module.scss
@@ -56,6 +56,10 @@
       &.right {
         margin-right: c.$grid * 1.25;
       }
+
+      &:not(.isSorted) {
+        color: c.$colorNeutral;
+      }
     }
 
     &.sortable {
