--- a/packages/ui/src/Toggle.module.scss
+++ b/packages/ui/src/Toggle.module.scss
@@ -84,6 +84,22 @@ $knobHorizontalOffset: math.max(c.$outlineWidth - c.$borderWidth, 0px);
     border: c.$borderWidth solid transparent;
     box-sizing: border-box;
     color: c.$colorNeutralWhite;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: $knobRadius;
+      width: $knobRadius;
+      background: $knobBgOff;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      /* doiuse-disable calc */
+      right: calc(#{$width} - #{c.$borderWidth * 2} - #{$knobRadius} - #{$knobHorizontalOffset});
+      /* doiuse-enable calc */
+      transition: right c.$transitionTimeMedium ease-in;
+    }
   }
 
   // track states
@@ -100,6 +116,11 @@ $knobHorizontalOffset: math.max(c.$outlineWidth - c.$borderWidth, 0px);
     background-color: c.$colorNeutralLight;
     border-color: c.$colorNeutralLight;
     box-shadow: none;
+    color: c.$colorNeutral;
+
+    &::before {
+      background: c.$colorNeutral;
+    }
   }
 
   label.focus .toggleTrack,
@@ -110,29 +131,22 @@ $knobHorizontalOffset: math.max(c.$outlineWidth - c.$borderWidth, 0px);
   // track ON state
   input:checked + label .toggleTrack {
     background: $trackBgOn;
+
+    &::before {
+      background: $knobBgOn;
+      right: $knobHorizontalOffset;
+    }
   }
 
-  // the `knob` OFF state
-  .toggleTrack::before {
-    content: '';
-    display: inline-block;
-    height: $knobRadius;
-    width: $knobRadius;
-    background: $knobBgOff;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    /* doiuse-disable calc */
-    right: calc(#{$width} - #{c.$borderWidth * 2} - #{$knobRadius} - #{$knobHorizontalOffset});
-    /* doiuse-enable calc */
-    transition: right c.$transitionTimeMedium ease-in;
-  }
+  input:checked + label.disabled .toggleTrack {
+    background-color: c.$colorSuccessDark;
+    border-color: c.$colorNeutralLight;
+    box-shadow: none;
+    color: c.$colorNeutral;
 
-  // knob ON state
-  input:checked + label .toggleTrack::before {
-    background: $knobBgOn;
-    right: $knobHorizontalOffset;
+    &::before {
+      background-color: c.$colorNeutral;
+    }
   }
 
   .toggleTrackText {
