--- a/packages/ui/src/Select/SelectField.module.scss
+++ b/packages/ui/src/Select/SelectField.module.scss
@@ -6,7 +6,6 @@ $menuMargin: c.$grid * 3;
 $selectContainer: ':global .hz-select-field';
 $selectControl: ':global .hz-select-field__control';
 $selectValueContainer: ':global .hz-select-field__value-container';
-$selectSingleValue: ':global .hz-select-field__single-value';
 $selectMenuPortal: ':global .hz-select-field__menu-portal';
 $selectMenu: ':global .hz-select-field__menu';
 $selectMenuList: ':global .hz-select-field__menu-list';
@@ -32,16 +31,13 @@ $selectGroupHeading: ':global .hz-select-field__group-heading';
 
   #{$selectContainer} {
     flex: 1 1 auto;
+    max-width: 100%;
 
     @include c.typographyBodySmall;
   }
 
   #{$selectValueContainer} {
     padding: c.$grid * 1.375 0;
-
-    #{$selectSingleValue} {
-      position: absolute;
-    }
   }
 
   #{$selectControl} {
