add auth secondary button

--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -27,3 +27,4 @@ $colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
 $colorMenuDark: #333 !default;
 $authPrimary: #c6ff3a !default;
+$authSecondary: #0b2b39 !default;
