HZX-47 auth buttons (#544)
* add auth secondary button

* add auth secondary button

* add auth secondary button

* revert pnpm.lock

* revert medium button

--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -214,6 +214,37 @@
         @include disabledButtonColor;
       }
     }
+
+    &AuthSecondary {
+      @include buttonColor(c.$authSecondary);
+
+      border-color: c.$colorNeutralWhite;
+
+      &:hover,
+      &.hover,
+      &:focus-visible,
+      &.focus {
+        @include buttonColor(lighten(c.$authSecondary, 10%));
+      }
+
+      &:active,
+      &.active {
+        @include buttonColor(darken(c.$authSecondary, 10%));
+      }
+
+      &.variantContained {
+        color: c.$colorNeutralWhite;
+      }
+
+      &.variantOutlined {
+        border-color: c.$authSecondary;
+      }
+
+      &:disabled {
+        color: c.$colorText;
+        background-color: c.$colorNeutralWhite;
+      }
+    }
   }
 
   &.variant {
