--- a/packages/ui/styles/constants/_colors.scss
+++ b/packages/ui/styles/constants/_colors.scss
@@ -21,10 +21,14 @@ $colorErrorDark: darken($colorError, 10%) !default;
 $colorText: #061827 !default;
 $colorTextSecondary: #707482 !default;
 $colorTextSubdued: #69707d !default;
+$brandColorText: #10a4b3 !default;
 $colorOverlayBackground: #f0f6ff !default;
 $colorAccessibilityOutline: #74f !default;
 $colorBrand: #00bac6 !default;
 $colorShadow: rgb(53 61 73 / 20%) !default;
 $colorMenuDark: #333 !default;
-$authPrimary: #c6ff3a !default;
+$brandPrimary: #c6ff3a !default;
+$authPrimary: $brandPrimary !default;
 $authSecondary: #0b2b39 !default;
+$brandSecondary: #061727 !default;
+$brandAccent: #122d45 !default;
