--- a/packages/ui/styles/helpers/_a11y.scss
+++ b/packages/ui/styles/helpers/_a11y.scss
@@ -36,3 +36,11 @@
   top: 1px;
   left: 1px;
 }
+
+@mixin focusOutlineSimple() {
+  &:focus-within {
+    outline: none;
+
+    @include outlineSimple;
+  }
+}
